--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /output/*
 /trunk/runtime-Debug-E4.product
-/script/result.log
+/script/*
 
 /releaseScripts/default/DeltaDebugger-linux/*
 /releaseScripts/default/DeltaDebugger-win32/*
